No there yet - Initial steps towards upgrading